@@ -290,7 +290,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-1").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-1")
 						.in().count().next(),
 				"Edge exists to 2 connectors");
@@ -310,7 +310,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-2").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-2")
 						.in().count().next(),
 				"Edge exists to only 2 service-instances");
@@ -329,7 +329,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-3").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-3")
 						.in().count().next(),
 				"Edge exists to only 2 pnfs");
@@ -348,7 +348,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-4").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-4")
 						.in().count().next(),
 				"Edge exists to only 2 logical-link");
@@ -367,7 +367,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-5").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-5")
 						.in().count().next(),
 				"Edge exists to only 2 logical-link");
@@ -386,7 +386,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-6").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-6")
 						.in().count().next(),
 				"Edge exists to only 2 generic-vnfs");
@@ -405,7 +405,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-7").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-7")
 						.in().count().next(),
 				"Edge exists to only 2 configurations");
@@ -424,7 +424,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-8").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-8")
 						.in().count().next(),
 				"Edge exists to only 2 l3-networks");
@@ -443,7 +443,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-9").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-9")
 						.in().count().next(),
 				"Edge exists to only 2 vf-modules");
@@ -462,7 +462,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-10").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-10")
 						.in().count().next(),
 				"Edge exists to only 2 collections");
@@ -481,7 +481,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-11").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-11")
 						.in().count().next(),
 				"Edge exists to only 2 instance-group2");
@@ -500,7 +500,7 @@ public class MigrateModelVerTest extends AAISetup{
 						.has("aai-node-type", "model-ver").has("model-version-id","model-version-id-12").hasNext(),
 				"Edge not created");
 
-		assertEquals(new Long(2L),
+		assertEquals(Long.valueOf(2L),
 				g.V().has("aai-node-type", "model-ver").has("model-version-id", "model-version-id-12")
 						.in().count().next(),
 				"Edge exists to only 2 allotted-resource");
